--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "perfect-scrollbar-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A wrapper for perfect-scrollbar to React Component",
   "author": "Nghiệp<me@nghiepit.pro>",
   "homepage": "http://perfect-scrollbar-react.surge.sh",
-  "main": "index.min.js",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.min.js",
   "dependencies": {
     "perfect-scrollbar": "^1.3.0",
     "prop-types": "^15.6.0",
@@ -20,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
@@ -31,12 +35,9 @@
   },
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server",
-    "build":
-      "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress --profile -p",
-    "demo":
-      "npm run build && mv bundle.js examples/ && surge examples --domain perfect-scrollbar-react.surge.sh",
-    "lib":
-      "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.lib.config.js --progress --profile -p"
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress --profile -p",
+    "demo": "npm run build && mv bundle.js examples/ && surge examples --domain perfect-scrollbar-react.surge.sh",
+    "dist": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.dist.config.js --progress --profile -p"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,10 @@
   "bugs": {
     "url": "https://github.com/tronghiep92/perfect-scrollbar-react/issues"
   },
-  "keywords": ["react", "scroll", "scrollbar"],
+  "keywords": [
+    "react",
+    "scroll",
+    "scrollbar"
+  ],
   "license": "MIT"
 }
