--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "perfect-scrollbar-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A wrapper for perfect-scrollbar to React Component",
   "author": "Nghiệp<me@nghiepit.pro>",
   "homepage": "http://perfect-scrollbar-react.surge.sh",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "main": "dist/index.min.js",
   "dependencies": {
     "perfect-scrollbar": "^1.3.0",
@@ -35,21 +33,21 @@
   },
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server",
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress --profile -p",
-    "demo": "npm run build && mv bundle.js examples/ && surge examples --domain perfect-scrollbar-react.surge.sh",
-    "dist": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.dist.config.js --progress --profile -p"
+    "build":
+      "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress --profile -p",
+    "demo":
+      "npm run build && mv bundle.js examples/ && surge examples --domain perfect-scrollbar-react.surge.sh",
+    "dist":
+      "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.dist.config.js --progress --profile -p",
+    "prepublish": "npm run dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tronghiep92/perfect-scrollbar-react.git"
+    "url": "git+https://github.com/nghiepit/perfect-scrollbar-react.git"
   },
   "bugs": {
-    "url": "https://github.com/tronghiep92/perfect-scrollbar-react/issues"
+    "url": "https://github.com/nghiepit/perfect-scrollbar-react/issues"
   },
-  "keywords": [
-    "react",
-    "scroll",
-    "scrollbar"
-  ],
+  "keywords": ["react", "scroll", "scrollbar", "perfect-scrollbar"],
   "license": "MIT"
 }
